--- a/templates/accounts/customer_dashboard.html
+++ b/templates/accounts/customer_dashboard.html
@@ -4,16 +4,18 @@
 | Costumer Dashboard
 {% endblock%}
 {% block content %}
+{% for customer in customers %}
 <section id="showcase-inner" class="py-5 text-white">
     <div class="container">
       <div class="row text-center">
         <div class="col-md-12">
           <h1 class="display-4">Customer Dashboard</h1>
-          <p class="lead">Your Balance is: ₹ {{ customer.first_name }}</p>
+          <p class="lead">Your Balance is: ₹ {{ customer.balance }}</p>
+          <a href="{% url 'add_money' %}" class="btn btn-primary btn">Add Money</a>
         </div>
       </div>
     </div>
-  </section>
+  </section>  
 
   <!-- Breadcrumb -->
   <section id="bc" class="mt-3">
@@ -76,4 +78,5 @@
       </div>
     </div>
   </section>
+  {% endfor %}
 {% endblock %}
