--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -49,7 +49,7 @@
             {% endif %}
           >
             <a class="nav-link" href="{% url 'customer_dashboard' %}">
-              <i class="fas"></i> Welcome {{ user.username }} </a>
+              <i class="fas"></i> Welcome {{ user.first_name }} </a>
           </li>
           <li class="nav-item mr-3">
             <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
