--- a/templates/accounts/vendor_dashboard.html
+++ b/templates/accounts/vendor_dashboard.html
@@ -67,10 +67,11 @@
                   </div>
                   <div class="row text-secondary pb-2">
                     <div class="col-6">
-                      <i class="fas fa-clock"></i> {{ product.list_date | timesince }}</div>
+                      <i class="fas fa"></i> Items Sold - {{ product.sales }}</div>
                   </div>
                   <hr>
                   <a href="{% url 'product' product.id %}" class="btn btn-primary btn-block">More Info</a>
+                  <a href="{% url 'delete_product' product.id %}" class="btn btn-danger btn-block">Delete Item</a>
                 </div>
               </div>
             </div>
