--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="row text-secondary pb-2">
                   <div class="col-6">
-                    <i class="fas fa-clock"></i> {{ product.list_date | timesince }}</div>
+                    <i class="fas fa"></i> Items Sold - {{ product.sales }}</div>
                 </div>
                 <hr>
                 <a href="{% url 'product' product.id %}" class="btn btn-primary btn-block">More Info</a>
