--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,5 +1,5 @@
 {% extends  'base.html' %}
-
+{% load socialaccount %}
 {% block title %}
 | Login
 {% endblock%}
@@ -28,9 +28,11 @@
                   <label for="password2">Password</label>
                   <input type="password" name="password" class="form-control" required>
                 </div>
+                <!-- <a class="btn btn-primary btn-block" href="{% provider_login_url 'google' %}">Login With Google</a> -->
 
                 <input type="submit" value="Login" class="btn btn-secondary btn-block">
               </form>
+
             </div>
           </div>
         </div>
