Some functionality added for shopping cart

--- a/templates/accounts/vendor_orders.html
+++ b/templates/accounts/vendor_orders.html
@@ -10,6 +10,7 @@
         <div class="col-md-12">
           <h1 class="display-4">Placed Orders</h1>
           <p class="lead">Here are all the orders that have been placed</p>
+          <a href="{% url 'get_details' %}" class="btn btn-primary btn">Get Excel Report</a>
         </div>
       </div>
     </div>
