--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -49,7 +49,17 @@
             {% endif %}
           >
             <a class="nav-link" href="{% url 'customer_dashboard' %}">
-              <i class="fas"></i> Welcome {{ user.first_name }} </a>
+              <i class="fas fa-user"></i> Welcome {{ user.first_name }} </a>
+          </li>
+          <li 
+          {% if 'cart' in request.path %}
+            class="nav-item active mr-3"
+            {% else %}
+            class="nav-item mr-3"
+            {% endif %}
+          >
+            <a class="nav-link" href="{% url 'cart' %}">
+              <i class="fa fa-shopping-cart"></i> Shopping Cart </a>
           </li>
           <li class="nav-item mr-3">
             <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
