--- a/templates/products/search.html
+++ b/templates/products/search.html
@@ -102,7 +102,7 @@
                   </div>
                   <div class="row text-secondary pb-2">
                     <div class="col-6">
-                      <i class="fas fa-clock"></i> {{ product.list_date | timesince }}</div>
+                      <i class="fas fa"></i> Sales - {{ product.sales }}</div>
                   </div>
                   <hr>
                   <a href="{% url 'product' product.id %}" class="btn btn-primary btn-block">More Info</a>
