--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -70,8 +70,8 @@
 
   <!-- Work -->
   <section id="work" class="bg-dark text-white text-center">
-    <h2 class="display-4">We Work For You</h2>
-    <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem velit aperiam, unde aliquid at similique!</h4>
+    <h2 class="display-4">The Sports Store</h2>
+    <h4>Discover the finest selection of sports products at The Sports Store, where excellence meets your passion</h4>
     <hr>
     <a href="{% url 'products' %}" class="btn btn-secondary text-white btn-lg">View Our Featured Products</a>
   </section>
@@ -80,36 +80,36 @@
   <section id="team" class="py-5">
     <div class="container">
       <h2 class="text-center">Testimonials</h2>
+      <br>
       <div class="row text-center">
         <div class="col-md-4">
-          <img src="assets/img/realtors/kyle.jpg" alt="" class="rounded-circle mb-3">
+          <h4>Mark Hudson</h4>
+          <p class="text-success">Seller</p>
+          <hr>
+          <p>"I am extremely satisfied with my experience as a seller on The Sports Store. The platform's user-friendly interface, prompt 
+            customer support, and robust marketing tools have helped me reach a wider audience and increase my sales. It's a trustworthy and 
+            reliable platform that I highly recommend to all aspiring online sellers."
+          </p>
+        </div>
+ 
+        <div class="col-md-4">
           <h4>Kyle Brown</h4>
           <p class="text-success">
-            <i class="text-success mb-3"></i> Seller</p>
+            <i class="text-success mb-3"></i> Customerr</p>
           <hr>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui, fugit Lorem ipsum dolor sit amet 
-            consectetur adipisicing elit. Sunt, quasi!
+          <p>"I can't express how thrilled I am with my shopping experience on The Sports Store. From the vast product selection to the 
+            seamless checkout process, every aspect was exceptional. The quality of the products exceeded my expectations, and the timely 
+            delivery made it even better. Highly recommend this website for all your shopping needs!"
           </p>
         </div>
 
         <div class="col-md-4">
-          <img src="assets/img/realtors/mark.jpg" alt="" class="rounded-circle mb-3">
-          <h4>Mark Hudson</h4>
-          <p class="text-success">Customer</p>
-          <hr>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis non quisquam incidunt tempora 
-            repudiandae eum id quasi illo quia laudantium!
-          </p>
-        </div>
-
-        <div class="col-md-4">
-          <img src="assets/img/realtors/jenny.jpg" alt="" class="rounded-circle mb-3">
           <h4>Jenny Johnson</h4>
           <p class="text-success">Customer</p>
           <hr>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos numquam 
-            laudantium perspiciatis non, inventore in debitis impedit sequi porro iure.
+          <p>"I recently made a purchase on The Sports Store and I couldn't be happier with the experience. The website is easy to 
+            navigate, the checkout process was seamless, and my order arrived promptly and in perfect condition. I will definitely be shopping 
+            here again and recommending it to my friends!"
           </p>
         </div>
       </div>
