--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -61,6 +61,12 @@
             <a class="nav-link" href="{% url 'cart' %}">
               <i class="fa fa-shopping-cart"></i> Shopping Cart </a>
           </li>
+          <li 
+            class="nav-item mr-3"
+          >
+            <a class="nav-link" href="{% url 'wishlist' %}">
+              <i class="fa fa-list"></i> Wishlist </a>
+          </li>
           <li class="nav-item mr-3">
             <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link">
               <i class="fas fa-sign-out-alt"></i> Logout
