--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -28,7 +28,8 @@
                   <label for="password2">Password</label>
                   <input type="password" name="password" class="form-control" required>
                 </div>
-                <!-- <a class="btn btn-primary btn-block" href="{% provider_login_url 'google' %}">Login With Google</a> -->
+                <a class="btn btn-primary btn-block" href="{% provider_login_url 'google' %}">
+                  <i class="fab fa-google"></i> Login With Google</a>
 
                 <input type="submit" value="Login" class="btn btn-secondary btn-block">
               </form>
