--- a/templates/accounts/register_customer.html
+++ b/templates/accounts/register_customer.html
@@ -1,5 +1,5 @@
 {% extends  'base.html' %}
-
+{% load socialaccount %}
 {% block title %}
 | Customer Register
 {% endblock%}
@@ -57,6 +57,8 @@
               <label for="state">State</label>
               <input type="text" name="state" class="form-control" required>
           </div>
+          <a class="btn btn-primary btn-block" href="{% provider_login_url 'google' %}">
+            <i class="fab fa-google"></i> Signup With Google</a>
                 <input type="submit" value="Register" class="btn btn-secondary btn-block">
               </form>
             </div>
